huawei: fix memory leak when parsing HCSQ response

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/220