plugins/huawei/mm-broadband-modem-huawei.c
@@ -1793,6 +1793,7 @@ huawei_hcsq_changed (MMPortSerialAt *port,
         g_free (str);
         return;
     }
+    g_free (str);
 
     detailed_signal_clear (&self->priv->detailed_signal);
 
